added floating buttons - editing the app theme colors to make it match with images - added recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ToDoListAPp</string>
+    <string name="app_name">mykloud list</string>
+    <string name="add">add</string>
+    <string name="remove">remove</string>
 </resources>
