--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title">Title</string>
     <string name="priority">Priority</string>
     <string name="cancel">Cancel</string>
+    <string name="edit">edit</string>
 </resources>
