--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="priority">Priority</string>
     <string name="cancel">Cancel</string>
     <string name="edit">edit</string>
+    <string name="edit_task">Edit Task</string>
 </resources>
